# adb-buddy

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml
docs/: architecture.md  commands-reference.md  safety.md  troubleshooting.md
docs/superpowers/specs/: 2026-07-04-adb-buddy-mvp-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adb/: mod.rs  models.rs  path.rs  runner.rs
src-tauri/src/adb/parser/: battery.rs  devices.rs  getprop.rs  install.rs  mod.rs  packages.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: devices.rs  files.rs  history.rs  install.rs  logs.rs  mod.rs  packages.rs  screenshot.rs  settings.rs  shell.rs
src-tauri/src/history/: mod.rs  models.rs  schema.rs  store.rs
src-tauri/src/process/: manager.rs  mod.rs  stream.rs
src-tauri/src/settings/: mod.rs
src/bindings/: types.ts
src/components/layout/: AppShell.tsx  CommandConsole.tsx  MainPanel.tsx  NavRail.tsx  TopBar.tsx
src/ipc/: client.ts  events.ts  mock.ts
src/lib/: errors.test.ts  errors.ts  format.ts
src/store/: console.ts  devices.test.ts  devices.ts  history.ts  logcat.test.ts  logcat.ts  settings.ts
src/styles/: global.css
src/test/: setup.ts
tests/fixtures/: devices_l.txt  dumpsys_battery.txt  getprop.txt  install_failure_downgrade.txt  pm_list.txt
(+14 files in other folders)
