[package]
name = "adb-buddy"
version = "0.1.1"
description = "ADB Buddy - A Windows GUI for Android ADB"
authors = ["ADB Buddy"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "adb_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
ts-rs = { version = "10.0", features = ["chrono"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
which = "7.0"
directories = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
